cncjs.service.yml
apiVersion: v1
kind: Service
metadata:
  name: cncjs-http
spec:
  selector:
    app: cncjs
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
